--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "@unform/core": "^2.1.0",
   "@unform/web": "^2.1.0",
   "axios": "^0.19.2",
+  "dotenv": "^8.2.0",
   "polished": "^3.5.2",
   "react": "^16.13.1",
   "react-dom": "^16.13.1",
@@ -44,10 +45,18 @@
   "@types/react-router-dom": "^5.1.4",
   "@types/styled-components": "^5.1.0",
   "@types/yup": "^0.28.0",
+  "@typescript-eslint/eslint-plugin": "^3.0.2",
+  "@typescript-eslint/parser": "^3.0.2",
   "eslint": "^6.8.0",
+  "eslint-config-airbnb": "^18.1.0",
   "eslint-config-prettier": "^6.11.0",
   "eslint-import-resolver-typescript": "^2.0.0",
+  "eslint-plugin-import": "2.20.1",
+  "eslint-plugin-jsx-a11y": "6.2.3",
   "eslint-plugin-prettier": "^3.1.3",
+  "eslint-plugin-react": "7.19.0",
+  "eslint-plugin-react-hooks": "2.5.0",
+  "jest": "^26.0.1",
   "prettier": "^2.0.5",
   "typescript": "~3.7.2"
  }
