--- a/package.json
+++ b/package.json
@@ -3,9 +3,6 @@
  "version": "1.0",
  "private": true,
  "dependencies": {
-  "@testing-library/jest-dom": "^4.2.4",
-  "@testing-library/react": "^9.3.2",
-  "@testing-library/user-event": "^7.1.2",
   "@unform/core": "^2.1.0",
   "@unform/web": "^2.1.0",
   "axios": "^0.19.2",
@@ -38,6 +35,10 @@
   ]
  },
  "devDependencies": {
+  "@testing-library/jest-dom": "^4.2.4",
+  "@testing-library/react": "^9.3.2",
+  "@testing-library/user-event": "^7.1.2",
+  "@types/axios": "^0.14.0",
   "@types/jest": "^24.0.0",
   "@types/node": "^12.0.0",
   "@types/react": "^16.9.0",
@@ -56,8 +57,8 @@
   "eslint-plugin-prettier": "^3.1.3",
   "eslint-plugin-react": "7.19.0",
   "eslint-plugin-react-hooks": "2.5.0",
-  "jest": "^26.0.1",
   "prettier": "^2.0.5",
+  "ts-jest": "^26.1.0",
   "typescript": "~3.7.2"
  }
 }
