Footer section refactoring

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -51,6 +51,9 @@
  "settings": {
   "import/resolver": {
    "typescript": {}
+  },
+  "node": {
+   "extensions": [".js", ".jsx", ".ts", ".tsx"]
   }
  }
 }
