--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,8 +24,12 @@
  },
  "plugins": ["@typescript-eslint", "prettier", "react", "react-hooks"],
  "rules": {
-  "@typescript-eslint/camelcase": "off",
-  "@typescript-eslint/explicit-function-return-type": ["error", { "allowExpressions": true }],
+  "@typescript-eslint/explicit-function-return-type": [
+   "error",
+   { "allowExpressions": true }
+  ],
+  "@typescript-eslint/no-explicit-any": "off",
+  "@typescript-eslint/no-unused-vars": ["error"],
   "import/extensions": [
    "error",
    "ignorePackages",
