Jest configs, etc

--- a/package.json
+++ b/package.json
@@ -19,8 +19,19 @@
  "scripts": {
   "start": "react-scripts start",
   "build": "react-scripts build",
-  "test": "react-scripts test",
+  "test": "react-scripts test --coverage --watchAll false",
   "eject": "react-scripts eject"
+ },
+ "eslintConfig": {
+  "extends": "react-app"
+ },
+ "jest": {
+  "collectCoverageFrom": [
+   "src/pages/**/*.tsx",
+   "src/components/**/*.tsx",
+   "src/hooks/*.tsx",
+   "!src/hooks/index.tsx"
+  ]
  },
  "browserslist": {
   "production": [
