--- a/package.json
+++ b/package.json
@@ -48,8 +48,8 @@
  "devDependencies": {
   "@testing-library/jest-dom": "^4.2.4",
   "@testing-library/react": "^9.3.2",
+  "@testing-library/react-hooks": "^3.3.0",
   "@testing-library/user-event": "^7.1.2",
-  "@types/axios": "^0.14.0",
   "@types/jest": "^24.0.0",
   "@types/node": "^14.0.13",
   "@types/react": "^16.9.0",
@@ -59,6 +59,7 @@
   "@types/yup": "^0.28.0",
   "@typescript-eslint/eslint-plugin": "^3.0.2",
   "@typescript-eslint/parser": "^3.0.2",
+  "axios-mock-adapter": "^1.18.1",
   "eslint": "^6.8.0",
   "eslint-config-airbnb": "^18.1.0",
   "eslint-config-prettier": "^6.11.0",
@@ -69,6 +70,7 @@
   "eslint-plugin-react": "7.19.0",
   "eslint-plugin-react-hooks": "2.5.0",
   "prettier": "^2.0.5",
+  "react-test-renderer": "^16.13.1",
   "ts-jest": "^26.1.0",
   "typescript": "~3.7.2"
  }
