Finished scroll retention

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "@unform/web": "^2.1.0",
   "axios": "^0.19.2",
   "dotenv": "^8.2.0",
+  "oaf-react-router": "^2.1.1",
   "polished": "^3.5.2",
   "react": "^16.13.1",
   "react-dom": "^16.13.1",
