--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,10 +27,13 @@
  "rules": {
   "@typescript-eslint/explicit-function-return-type": [
    "error",
-   { "allowExpressions": true }
+   {
+    "allowExpressions": true
+   }
   ],
   "@typescript-eslint/no-explicit-any": "off",
   "@typescript-eslint/no-unused-vars": ["error"],
+  "jsx-a11y/label-has-associated-control": "off",
   "import/extensions": [
    "error",
    "ignorePackages",
