--- a/package.json
+++ b/package.json
@@ -2,6 +2,69 @@
  "name": "aufklarung",
  "version": "1.0",
  "private": true,
+ "description": "Repositório do site da revista de filosofia Aufklärung",
+ "keywords": [
+  "filosofia",
+  "revistas",
+  "educação",
+  "react",
+  "reactjs"
+ ],
+ "homepage": "http://aufklarung-dev.herokuapp.com/",
+ "bugs": {
+  "url": "https://github.com/hyoretsu/aufklarung-site/issues",
+  "email": "hyoretsu@gmail.com"
+ },
+ "repository": {
+  "type": "git",
+  "url": "https://github.com/hyoretsu/aufklarung-site"
+ },
+ "author": {
+  "name": "Aran Leite de Gusmão",
+  "email": "hyoretsu@gmail.com",
+  "url": "https://www.linkedin.com/in/aranleite/"
+ },
+ "scripts": {
+  "build": "react-scripts build",
+  "eject": "react-scripts eject",
+  "start": "react-scripts start",
+  "test": "react-scripts test --coverage --watchAll false"
+ },
+ "husky": {
+  "hooks": {
+   "pre-commit": "lint-staged"
+  }
+ },
+ "lint-staged": {
+  "src/**/*.ts": [
+   "eslint --fix",
+   "yarn test --bail --findRelatedTests",
+   "git add"
+  ]
+ },
+ "browserslist": {
+  "production": [
+   ">0.2%",
+   "not dead",
+   "not op_mini all"
+  ],
+  "development": [
+   "last 1 chrome version",
+   "last 1 firefox version",
+   "last 1 safari version"
+  ]
+ },
+ "eslintConfig": {
+  "extends": "react-app"
+ },
+ "jest": {
+  "collectCoverageFrom": [
+   "src/pages/**/*.tsx",
+   "src/components/**/*.tsx",
+   "src/hooks/*.tsx",
+   "!src/hooks/index.tsx"
+  ]
+ },
  "dependencies": {
   "@unform/core": "^2.1.0",
   "@unform/web": "^2.1.0",
@@ -18,35 +81,6 @@
   "react-scripts": "3.4.1",
   "styled-components": "^5.1.0",
   "yup": "^0.28.4"
- },
- "scripts": {
-  "start": "react-scripts start",
-  "build": "react-scripts build",
-  "test": "react-scripts test --coverage --watchAll false",
-  "eject": "react-scripts eject"
- },
- "eslintConfig": {
-  "extends": "react-app"
- },
- "jest": {
-  "collectCoverageFrom": [
-   "src/pages/**/*.tsx",
-   "src/components/**/*.tsx",
-   "src/hooks/*.tsx",
-   "!src/hooks/index.tsx"
-  ]
- },
- "browserslist": {
-  "production": [
-   ">0.2%",
-   "not dead",
-   "not op_mini all"
-  ],
-  "development": [
-   "last 1 chrome version",
-   "last 1 firefox version",
-   "last 1 safari version"
-  ]
  },
  "devDependencies": {
   "@testing-library/jest-dom": "^4.2.4",
@@ -68,10 +102,13 @@
   "eslint-config-prettier": "^6.11.0",
   "eslint-import-resolver-typescript": "^2.0.0",
   "eslint-plugin-import": "2.20.1",
+  "eslint-plugin-import-helpers": "^1.1.0",
   "eslint-plugin-jsx-a11y": "6.2.3",
   "eslint-plugin-prettier": "^3.1.3",
   "eslint-plugin-react": "7.19.0",
   "eslint-plugin-react-hooks": "2.5.0",
+  "husky": "^4.2.5",
+  "lint-staged": "^10.2.11",
   "prettier": "^2.0.5",
   "react-test-renderer": "^16.13.1",
   "ts-jest": "^26.1.0",
