--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,7 +23,7 @@
   "ecmaVersion": 2018,
   "sourceType": "module"
  },
- "plugins": ["@typescript-eslint", "prettier", "react", "react-hooks"],
+ "plugins": ["@typescript-eslint", "eslint-plugin-import-helpers", "prettier", "react", "react-hooks"],
  "rules": {
   "@typescript-eslint/explicit-function-return-type": [
    "error",
@@ -44,6 +44,16 @@
   ],
   "import/no-duplicates": "off",
   "import/prefer-default-export": "off",
+  "import-helpers/order-imports": [
+   "warn",
+   {
+    "newlinesBetween": "always",
+    "groups": ["module", ["/^components/", "parent"], "/^assets/", "sibling"],
+    "alphabetize": {
+     "order": "asc"
+    }
+   }
+  ],
   "no-unused-expressions": "off",
   "prettier/prettier": "error",
   "react/jsx-filename-extension": [1, { "extensions": [".tsx"] }],
