--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,8 @@
   "skipLibCheck": true,
   "strict": true,
   "strictPropertyInitialization": false,
-  "target": "es5"
+  "target": "es5",
+  "typeRoots": ["./node_modules/@types", "./src/@types"]
  },
- "include": ["src"]
+ "include": ["src/**/*"]
 }
