--- a/package.json
+++ b/package.json
@@ -1,117 +1,44 @@
 {
- "name": "aufklarung",
+ "name": "aufklarung-site",
  "version": "1.0",
  "private": true,
- "description": "Repositório do site da revista de filosofia Aufklärung",
- "keywords": [
-  "filosofia",
-  "revistas",
-  "educação",
-  "react",
-  "reactjs"
- ],
- "homepage": "http://aufklarung-dev.herokuapp.com/",
- "bugs": {
-  "url": "https://github.com/hyoretsu/aufklarung-site/issues",
-  "email": "hyoretsu@gmail.com"
- },
- "repository": {
-  "type": "git",
-  "url": "https://github.com/hyoretsu/aufklarung-site"
- },
- "author": {
-  "name": "Aran Leite de Gusmão",
-  "email": "hyoretsu@gmail.com",
-  "url": "https://www.linkedin.com/in/aranleite/"
- },
  "scripts": {
-  "build": "react-scripts build",
-  "eject": "react-scripts eject",
-  "start": "react-scripts start",
-  "test": "react-scripts test --coverage --watchAll false"
- },
- "husky": {
-  "hooks": {
-   "pre-commit": "lint-staged"
-  }
- },
- "lint-staged": {
-  "src/**/*.ts": [
-   "eslint --fix",
-   "yarn test --bail --findRelatedTests",
-   "git add"
-  ]
- },
- "browserslist": {
-  "production": [
-   ">0.2%",
-   "not dead",
-   "not op_mini all"
-  ],
-  "development": [
-   "last 1 chrome version",
-   "last 1 firefox version",
-   "last 1 safari version"
-  ]
- },
- "eslintConfig": {
-  "extends": "react-app"
- },
- "jest": {
-  "collectCoverageFrom": [
-   "src/pages/**/*.tsx",
-   "src/components/**/*.tsx",
-   "src/hooks/*.tsx",
-   "!src/hooks/index.tsx"
-  ]
+  "build": "next build",
+  "dev": "next dev",
+  "start": "next start"
  },
  "dependencies": {
-  "@unform/core": "^2.1.0",
-  "@unform/web": "^2.1.0",
-  "axios": "^0.19.2",
   "dotenv": "^8.2.0",
-  "formik": "^2.1.4",
-  "oaf-react-router": "^2.1.1",
-  "polished": "^3.5.2",
-  "react": "^16.13.1",
-  "react-dom": "^16.13.1",
-  "react-icons": "^3.10.0",
-  "react-loading": "^2.0.3",
-  "react-router-dom": "^5.1.2",
-  "react-scripts": "3.4.1",
-  "styled-components": "^5.1.0",
-  "yup": "^0.28.4"
+  "next": "10.0.4",
+  "polished": "^4.0.5",
+  "react": "17.0.1",
+  "react-dom": "17.0.1",
+  "react-icons": "^4.1.0",
+  "styled-components": "^5.2.1"
  },
  "devDependencies": {
-  "@testing-library/jest-dom": "^4.2.4",
-  "@testing-library/react": "^9.3.2",
-  "@testing-library/react-hooks": "^3.3.0",
-  "@testing-library/user-event": "^7.1.2",
-  "@types/jest": "^24.0.0",
-  "@types/node": "^14.0.13",
-  "@types/react": "^16.9.0",
-  "@types/react-dom": "^16.9.0",
-  "@types/react-router-dom": "^5.1.4",
-  "@types/styled-components": "^5.1.0",
-  "@types/yup": "^0.28.0",
-  "@typescript-eslint/eslint-plugin": "^3.0.2",
-  "@typescript-eslint/parser": "^3.0.2",
-  "axios-mock-adapter": "^1.18.1",
-  "eslint": "^6.8.0",
-  "eslint-config-airbnb": "^18.1.0",
-  "eslint-config-prettier": "^6.11.0",
-  "eslint-import-resolver-typescript": "^2.0.0",
-  "eslint-plugin-import": "2.20.1",
+  "@babel/core": "^7.12.10",
+  "@types/node": "^14.14.20",
+  "@types/react": "^17.0.0",
+  "@types/styled-components": "^5.1.7",
+  "@typescript-eslint/eslint-plugin": "^4.11.1",
+  "@typescript-eslint/parser": "^4.11.1",
+  "babel-plugin-styled-components": "^1.12.0",
+  "eslint": "^7.17.0",
+  "eslint-config-airbnb-base": "^14.2.1",
+  "eslint-config-prettier": "^7.1.0",
+  "eslint-import-resolver-typescript": "^2.3.0",
+  "eslint-plugin-import": "^2.22.1",
   "eslint-plugin-import-helpers": "^1.1.0",
-  "eslint-plugin-jsx-a11y": "6.2.3",
-  "eslint-plugin-prettier": "^3.1.3",
-  "eslint-plugin-react": "7.19.0",
-  "eslint-plugin-react-hooks": "2.5.0",
-  "husky": "^4.2.5",
-  "lint-staged": "^10.2.11",
-  "prettier": "^2.0.5",
-  "react-test-renderer": "^16.13.1",
-  "ts-jest": "^26.1.0",
-  "typescript": "~3.7.2"
+  "eslint-plugin-jsx-a11y": "^6.4.1",
+  "eslint-plugin-prettier": "^3.3.0",
+  "eslint-plugin-react": "^7.22.0",
+  "eslint-plugin-react-hooks": "^4.2.0",
+  "file-loader": "^6.2.0",
+  "husky": "^4.3.6",
+  "lint-staged": "^10.5.3",
+  "prettier": "^2.2.1",
+  "typescript": "^4.1.3",
+  "url-loader": "^4.1.1"
  }
 }
