--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,23 @@
 {
  "compilerOptions": {
   "allowJs": true,
-  "allowSyntheticDefaultImports": true,
   "baseUrl": "./src",
   "emitDecoratorMetadata": true,
   "esModuleInterop": true,
   "experimentalDecorators": true,
   "forceConsistentCasingInFileNames": true,
   "isolatedModules": true,
-  "jsx": "react",
+  "jsx": "preserve",
   "lib": ["dom", "dom.iterable", "esnext"],
   "module": "esnext",
   "moduleResolution": "node",
   "noEmit": true,
   "noImplicitAny": true,
-  "outDir": "./dist",
+  "paths": {
+   "@assets/*": ["assets/*"]
+  },
+  "pretty": true,
+  "removeComments": true,
   "resolveJsonModule": true,
   "rootDir": "./src",
   "skipLibCheck": true,
@@ -23,5 +26,6 @@
   "target": "es5",
   "typeRoots": ["./node_modules/@types", "./src/@types"]
  },
- "include": ["src/**/*"]
+ "include": ["src/**/*"],
+ "exclude": ["node_modules"]
 }
