--- a/package.json
+++ b/package.json
@@ -1,115 +1,66 @@
 {
- "name": "aufklarung",
- "version": "2.4.1",
- "private": true,
- "description": "Repositório do site da revista de filosofia Aufklärung",
- "keywords": [
-  "educação",
-  "filosofia",
-  "next",
-  "react",
-  "revistas",
-  "typescript"
- ],
- "homepage": "https://aufklarung.vercel.app",
- "bugs": {
-  "url": "https://github.com/hyoretsu/aufklarung-site/issues",
-  "email": "hyoretsu@gmail.com"
- },
- "repository": {
-  "type": "git",
-  "url": "https://github.com/hyoretsu/aufklarung-site"
- },
- "author": {
-  "name": "Aran Leite de Gusmão",
-  "email": "hyoretsu@gmail.com",
-  "url": "https://www.linkedin.com/in/aranleite"
- },
- "scripts": {
-  "build": "next build",
-  "dev": "NODE_OPTIONS='--inspect' node server.js",
-  "export": "next export",
-  "test": "jest --coverage --watchAll false --passWithNoTests",
-  "update": "pnpm up -L && git add package.json pnpm-lock.yaml",
-  "prepare": "husky install",
-  "transpileNext": "babel next.config.ts -o next.config.js",
-  "transpileServer": "babel server.ts -o server.js",
-  "transpileSitemap": "babel next-sitemap.ts -o next-sitemap.js --plugins add-module-exports",
-  "prebuild": "npm run transpileNext && npm run transpileSitemap",
-  "postbuild": "next-sitemap",
-  "predev": "npm run transpileNext && npm run transpileServer",
-  "preexport": "npm run transpileNext"
- },
- "lint-staged": {
-  "src/**/*.(ts|tsx)": [
-   "eslint --fix",
-   "yarn test --bail --findRelatedTests"
-  ]
- },
- "dependencies": {
-  "@babel/runtime": "^7.15.4",
-  "@linaria/core": "^3.0.0-beta.13",
-  "@linaria/react": "^3.0.0-beta.13",
-  "@unform/core": "^2.1.6",
-  "@unform/web": "^2.1.6",
-  "axios": "^0.23.0",
-  "core-js": "^3.18.3",
-  "formik": "^2.2.9",
-  "next": "^11.1.2",
-  "next-seo": "^4.28.1",
-  "polished": "^4.1.3",
-  "react": "^17.0.2",
-  "react-dom": "^17.0.2",
-  "react-icons": "^4.3.1",
-  "scheduler": "^0.20.2",
-  "use-context-selector": "^1.3.9",
-  "yup": "^0.32.11"
- },
- "devDependencies": {
-  "@babel/cli": "^7.15.7",
-  "@babel/core": "^7.15.8",
-  "@babel/plugin-transform-runtime": "^7.15.8",
-  "@babel/preset-env": "^7.15.8",
-  "@linaria/babel-preset": "^3.0.0-beta.13",
-  "@linaria/shaker": "^3.0.0-beta.13",
-  "@linaria/webpack-loader": "^3.0.0-beta.13",
-  "@next/eslint-plugin-next": "^11.1.2",
-  "@svgr/webpack": "^5.5.0",
-  "@types/enzyme": "^3.10.9",
-  "@types/jest": "^27.0.2",
-  "@types/node": "^16.11.1",
-  "@types/react": "^17.0.30",
-  "@types/react-dom": "^17.0.9",
-  "@types/webpack": "^5.28.0",
-  "@types/yup": "^0.29.13",
-  "@typescript-eslint/eslint-plugin": "^5.1.0",
-  "@typescript-eslint/parser": "^5.1.0",
-  "@wojtekmaj/enzyme-adapter-react-17": "^0.6.3",
-  "axios-mock-adapter": "^1.20.0",
-  "babel-jest": "^27.3.1",
-  "babel-plugin-add-module-exports": "^1.0.4",
-  "enzyme": "^3.11.0",
-  "eslint": "^8.0.1",
-  "eslint-config-airbnb": "^18.2.1",
-  "eslint-config-next": "^11.1.2",
-  "eslint-config-prettier": "^8.3.0",
-  "eslint-import-resolver-typescript": "^2.5.0",
-  "eslint-plugin-import": "2.25.2",
-  "eslint-plugin-import-helpers": "^1.1.0",
-  "eslint-plugin-jsx-a11y": "6.4.1",
-  "eslint-plugin-prettier": "^4.0.0",
-  "eslint-plugin-react": "7.26.1",
-  "eslint-plugin-react-hooks": "4.2.0",
-  "husky": "^7.0.2",
-  "jest": "^27.3.1",
-  "jest-enzyme": "^7.1.2",
-  "lint-staged": "^11.2.3",
-  "next-linaria": "1.0.1-beta",
-  "next-sitemap": "^1.6.189",
-  "prettier": "^2.4.1",
-  "ts-jest": "^27.0.7",
-  "ts-node": "^10.3.0",
-  "typescript": "~4.4.4",
-  "webpack": "^5.59.0"
- }
+    "name": "aufklarung",
+    "private": true,
+    "scripts": {
+        "build": "next build",
+        "dev": "next dev",
+        "export": "next export",
+        "test": "jest --coverage --watchAll false --passWithNoTests",
+        "prepare": "husky install && chmod ug+x .husky/*",
+        "postbuild": "next-sitemap"
+    },
+    "lint-staged": {
+        "src/**/*.(ts|tsx)": [
+            "eslint --fix",
+            "yarn test --bail --findRelatedTests"
+        ]
+    },
+    "dependencies": {
+        "axios": "^1.1.3",
+        "formik": "^2.2.9",
+        "next": "^13.0.2",
+        "next-seo": "^5.14.0",
+        "polished": "^4.2.2",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-icons": "^4.6.0",
+        "react-is": "^18.2.0",
+        "scheduler": "^0.23.0",
+        "styled-components": "^5.3.6",
+        "use-context-selector": "^1.4.1",
+        "yup": "^0.32.11"
+    },
+    "devDependencies": {
+        "@next/env": "^13.0.2",
+        "@svgr/webpack": "^6.5.1",
+        "@types/enzyme": "^3.10.12",
+        "@types/jest": "^29.2.2",
+        "@types/node": "^18.11.9",
+        "@types/react": "^18.0.25",
+        "@types/react-dom": "^18.0.8",
+        "@types/styled-components": "^5.1.26",
+        "@types/webpack": "^5.28.0",
+        "@typescript-eslint/eslint-plugin": "^5.42.1",
+        "@typescript-eslint/parser": "^5.42.1",
+        "axios-mock-adapter": "^1.21.2",
+        "eslint": "^8.27.0",
+        "eslint-config-airbnb": "^19.0.4",
+        "eslint-config-next": "^13.0.2",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-import-resolver-typescript": "^3.5.2",
+        "eslint-plugin-import": "2.26.0",
+        "eslint-plugin-import-helpers": "^1.3.1",
+        "eslint-plugin-jsx-a11y": "6.6.1",
+        "eslint-plugin-prettier": "^4.2.1",
+        "eslint-plugin-react": "7.31.10",
+        "eslint-plugin-react-hooks": "4.6.0",
+        "husky": "^8.0.2",
+        "jest": "^29.3.1",
+        "lint-staged": "^13.0.3",
+        "next-sitemap": "^3.1.30",
+        "prettier": "^2.7.1",
+        "ts-jest": "^29.0.3",
+        "ts-node": "^10.9.1",
+        "typescript": "~4.8.4"
+    }
 }
